# duwhal

./: README.md  process_logo.py  pyproject.toml
.github/workflows/: tests.yml
duwhal/: __init__.py  aggregation.py  api.py  graph.py  temporal.py
duwhal/core/: connection.py  facets.py  ingestion.py
duwhal/datasets/: __init__.py  genomics.py  media.py  nlp.py  retail.py  scaling.py  scc_synthetic.py  social.py  temporal.py
duwhal/docs/: recommendation_path_integral_framework.md
duwhal/evaluation/: __init__.py  metrics.py  splitting.py
duwhal/mining/: association_rules.py  frequent_itemsets.py  sequences.py  sink_sccs.py
duwhal/profiling/: __init__.py  item_profiler.py  rule_profiler.py
duwhal/recommenders/: graph.py  item_cf.py  popularity.py
examples/core/: 01_association_rules.py  02_collaborative_filtering.py  03_sequential_patterns.py  04_temporal_graphs.py  05_graph_modeling_recommender.py  06_general_interaction_graph.py
examples/pathintegral/: __init__.py
examples/pathintegral/demo/: proof.py
examples/pathintegral/evaluation/: __init__.py
examples/pathintegral/graph/: __init__.py  scc.py
examples/pathintegral/propagator/: __init__.py  approximation.py  montecarlo.py
examples/use_cases/: benchmarking_models.py  context_facet_enrichment.py  ecosystem_equilibrium.py  evaluation_scaling.py  genomics_trajectories.py  media_playlist_discovery.py  nlp_token_cooccurrence.py  retail_market_basket.py  temporal_analysis.py
tests/: conftest.py  test_aggregation.py  test_api.py  test_association_rules.py  test_connection.py  test_datasets.py  test_facets.py  test_frequent_itemsets.py  test_graph.py  test_graph_recommender.py  test_ingestion.py  test_item_cf.py  test_metrics.py  test_popularity.py  test_profiling.py  test_robustness.py  test_sequences.py  test_sink_sccs.py  test_splitting.py  test_temporal.py
