[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duwhal"
version = "0.1.2"
description = "High-Performance Bipartite Interaction Graph Engine powered by DuckDB"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "recommendation", 
    "graph-theory",
    "bipartite-graph",
    "path-integral",
    "association-rules", 
    "collaborative-filtering", 
    "duckdb"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "duckdb>=0.10.0",
    "numpy>=1.23.0",
    "narwhals>=2.16.0",
    "pyarrow>=21.0.0",
    "pillow>=11.3.0",
    "scikit-learn>=1.6.1",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-cov>=7.0.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["duwhal*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line-too-long: SQL queries are intentionally verbose
    "E701",  # multiple-statements-colon: compact style in existing code
    "E702",  # multiple-statements-semicolon
    "E722",  # bare-except: used intentionally in ingestion layer
]

[tool.ruff.lint.per-file-ignores]
"duwhal/__init__.py" = ["F401"]
"examples/**" = ["E402"]
